--- a/index.ipynb
+++ b/index.ipynb
@@ -214,9 +214,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for city in cities:\n",
     "names_and_ranks = [] \n",
-    "# write a for loop that adds the properly formatted string to the names_and_ranks list\n"
+    "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
+    "for city in cities:\n",
+    "    \n"
    ]
   },
   {
