--- a/index.ipynb
+++ b/index.ipynb
@@ -217,8 +217,8 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for i in city_indices:\n",
-    "    ranked_city = str(i) + '. ' + cities[]\n",
-    "    names_and_ranks.append()\n",
+    "    ranked_city = str(i+1) + '. ' + cities[i]\n",
+    "    names_and_ranks.append(r)\n",
     "    \n"
    ]
   },
