--- a/index.ipynb
+++ b/index.ipynb
@@ -218,8 +218,9 @@
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for i in city_indices:\n",
     "    ranked_city = str(i+1) + '. ' + cities[i]\n",
-    "    names_and_ranks.append(r)\n",
-    "    \n"
+    "    names_and_ranks.append(ranked_city)\n",
+    "    \n",
+    "names_and_ranks"
    ]
   },
   {
