--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,7 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for i in city_indices:\n",
-    "    ranked_city = str(i+1) + '. ' + city_names[i]\n",
+    "    ranked_city = ''.format(str(i+1) + '. ' + city_names[i]\n",
     "    names_and_ranks.append(ranked_city)\n",
     "    \n",
     "names_and_ranks"
