--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        " '12. Iguazu Falls']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for i in city_indices:\n",
-    "    ranked_city = '{}. {}'.format(i+1,city_names[i])str(i+1) + '. ' + city_names[i]\n",
+    "    ranked_city = '{}. {}'.format(i+1,city_names[i])\n",
     "    names_and_ranks.append(ranked_city)\n",
     "    \n",
     "names_and_ranks"
