--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,7 @@
     "city_populations = []\n",
     "\n",
     "for i in cities:\n",
-    "    city_populations"
+    "    city_populations.append(population)"
    ]
   },
   {
