--- a/index.ipynb
+++ b/index.ipynb
@@ -283,6 +283,7 @@
     "city_populations = []\n",
     "\n",
     "for i in cities:\n",
+    "    population = i\n",
     "    city_populations.append(population)"
    ]
   },
