--- a/index.ipynb
+++ b/index.ipynb
@@ -276,27 +276,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "city_populations = []\n",
     "\n",
     "for i in cities:\n",
-    "    population = i['Po']\n",
+    "    population = i['Population']\n",
     "    city_populations.append(population)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_populations[0] # 2891000\n",
-    "city_populations[1] # 2800000\n",
+    "#city_populations[1] # 2800000\n",
     "city_populations[-1] # 0"
    ]
   },
