--- a/index.ipynb
+++ b/index.ipynb
@@ -283,8 +283,8 @@
     "city_populations = []\n",
     "\n",
     "for i in cities:\n",
-    "    population = i['Population']\n",
-    "    city_populations.append(population)"
+    "    population = \n",
+    "    city_populations.append(i['Population'])"
    ]
   },
   {
