--- a/index.ipynb
+++ b/index.ipynb
@@ -429,7 +429,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = [area for are]"
+    "city_areas = [area for area in ]"
    ]
   },
   {
