--- a/index.ipynb
+++ b/index.ipynb
@@ -429,7 +429,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = [city for area in citi]"
+    "city_areas = [city for city in cities]"
    ]
   },
   {
