--- a/index.ipynb
+++ b/index.ipynb
@@ -425,11 +425,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = [city for city in cities]"
+    "city_areas = [city['Area'] for city in cities]"
    ]
   },
   {
