--- a/index.ipynb
+++ b/index.ipynb
@@ -425,11 +425,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4758, 2731, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_areas = [city['Area'] for city in cities]"
+    "city_areas = [city['Area'] for city in cities]\n",
+    "city_areas"
    ]
   },
   {
